# Evo-Learn

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  REFACTORING_SUMMARY.md  RELEASE_NOTES.md  TEST_MAPPING.md  TEST_SUMMARY.md  check_installation.py  cli.py  config.yaml  core.py  docker-compose.yml  enhanced_README.md  enhanced_core.py  enhanced_utils.py  enhanced_visualization.py  evo_config.yaml  evo_learn_cli.py  package.json  preprocessing.py  pyproject.toml  requirements.txt  utils.py  validate.py  verify_evo_learn.py  visualization.py
.github/: SECURITY.md  dependabot.yml
.github/workflows/: auto-merge.yml  auto_update.yml  ci.yml  codeql-analysis.yml  dependabot-auto-merge.yml  docker.yml  evo_learn_workflow.yml  release.yml  test.yml
docs/: DEPENDABOT.md  INSTALLATION.md
evo_learn/: __init__.py  config.py  core.py  cross_validation.py  explainability.py  logging_utils.py  preprocessing.py  utils.py  validate.py
examples/: 01_basic_classification.py  02_regression_with_missing_data.py  03_imbalanced_classification.py  04_categorical_features.py  05_new_features_demo.py  README.md  example_usage.py
examples/data/: your_dataset.csv
mloptimizer/: __init__.py  core.py  preprocessing.py  utils.py
mloptimizer/models/: best_model.py
models/: baseline_logreg_classification_20251115_083053.pkl  baseline_logreg_classification_20251115_083053_metadata.json  baseline_logreg_classification_20251115_083110_metadata.json  baseline_logreg_classification_20251115_083144.pkl  baseline_logreg_classification_20251115_083144_metadata.json
tests/: __init__.py  conftest.py  smoke_test.py  test_core.py  test_core_enhanced.py  test_examples_integration.py  test_integration.py  test_new_features.py  test_preprocessing.py  test_preprocessing_enhanced.py  test_utils.py  test_validation.py  test_visualization_enhanced.py
